# qdrant-mcp

./: .dockerignore  .gitignore  CLAUDE.md  CLEANUP_LOG.md  CONFIG.md  Dockerfile  Dockerfile.dev  Makefile  README.md  build-secure.sh  config.py  docker-compose.secure.yml  example_usage.sh  generate_config.py  mcp_handler.py  mcp_server.py  pyproject.toml  pytest.ini  requirements-runtime.txt  requirements-test.txt  requirements.txt  run_tests.sh  server.py  startup.sh  supervisord.conf
.github/: dependabot.yml
.github/workflows/: README.md  dependency-update.yml  dev-build.yml  docker-build-push.yml  security-scan.yml  test.yml
conf/: config.yaml  config_development.yaml  config_production.yaml
conf/api/: default.yaml
conf/logging/: default.yaml
conf/mcp/: default.yaml
conf/qdrant/: default.yaml
conf/security/: default.yaml
conf/vector/: default.yaml
config/: config.example.yaml  config.production.yaml
hooks/: README.md  precompact_vectorize.py  requirements.txt  retrieve_vectors.py  setup.sh  test_hooks.py
tests/: conftest.py
tests/unit/: test_config.py  test_mcp_handler.py  test_mcp_server.py  test_rest_api.py
